# 51-Card-Game

./: CMakeLists.txt  Card.pro  CardGame.vcxproj  CardGame.vcxproj.filters  card.cpp  card.h  crew.cpp  crew.h  deck.cpp  deck.h  hand.cpp  hand.h  kurallar.cpp  kurallar.h  main.cpp  menu.cpp  menu.h  per.cpp  per.h  renkSecim.cpp  renkSecim.h  startup.cpp  startup.h
x64/Debug/: CardGame.exe.recipe  CardGame.ilk  CardGame.vcxproj.FileListAbsolute.txt  CodeAnalysisResultManifest.txt  card.nativecodeanalysis.sarif  crew.nativecodeanalysis.sarif  deck.nativecodeanalysis.sarif  deck.nativecodeanalysis.xml  hand.nativecodeanalysis.sarif  kurallar.nativecodeanalysis.sarif  main.nativecodeanalysis.sarif  main.nativecodeanalysis.xml  menu.nativecodeanalysis.sarif  per.nativecodeanalysis.sarif  renkSecim.nativecodeanalysis.sarif  startup.nativecodeanalysis.sarif  vc.nativecodeanalysis.all.xml  vc143.idb
x64/Debug/CardGame.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CardGame.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
